fix(card): only hide slot[name=body] when collapsed

--- a/packages/core/src/components/card/card.scss
+++ b/packages/core/src/components/card/card.scss
@@ -147,6 +147,6 @@ button {
   }
 }
 
-:host([expandable]:not([expanded])) .card-body slot {
+:host([expandable]:not([expanded])) .card-body slot[name='body'] {
   display: none;
 }
